fix hidden menu icon on small screen

--- a/letsmeet/main/static/css/custom.css
+++ b/letsmeet/main/static/css/custom.css
@@ -9,6 +9,10 @@
     }
 }
 
+#top-menu > .media-body {
+    padding-top: 12px;
+}
+
 .home-banner {
     padding-top: 3rem;
     padding-left: 3rem;
